FontAwesome expand/collapse icons. Todo: Input change bug in Edge

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -48,17 +48,17 @@ ul[role="tree"] {
   display: block;
 }
 
-[role="treeitem"] > div.checkbox::before {
-  display: inline-block;
+[role="treeitem"] > div.checkbox > i {
+  display: none;
   width: 20px;
 }
 
-[role="treeitem"][aria-expanded="false"] > div.checkbox::before {
-  content: '⯈';
+[role="treeitem"][aria-expanded="false"] > div.checkbox > i.expand {
+  display: inline-block;  
 }
 
-[role="treeitem"][aria-expanded="true"] > div.checkbox::before {
-  content: '⯆';
+[role="treeitem"][aria-expanded="true"] > div.checkbox > i.collapse {
+  display: inline-block;
 }
 
 [role="treeitem"]:focus {
